--- a/index.html
+++ b/index.html
@@ -4,140 +4,163 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | AI FUTURE POWER</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
-    body {
-      font-family: 'Montserrat', sans-serif;
-      height: 100vh;
+    body, html {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
       overflow: hidden;
-      background: #000;
-      color: #0f0;
+      background: linear-gradient(120deg, #ece9e6, #ffffff);
+    }
+
+    /* Background Animation */
+    .animated-bg {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .blob {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: #00bcd4;
+      border-radius: 50%;
+      opacity: 0.2;
+      animation: blob 15s infinite;
+    }
+
+    .blob:nth-child(2) {
+      background: #9c27b0;
+      top: 20%;
+      left: 70%;
+      animation-delay: 5s;
+    }
+
+    .blob:nth-child(3) {
+      background: #ff5722;
+      top: 60%;
+      left: 20%;
+      animation-delay: 10s;
+    }
+
+    @keyframes blob {
+      0%, 100% {
+        transform: scale(1) translate(0, 0);
+      }
+      50% {
+        transform: scale(1.5) translate(50px, -50px);
+      }
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
+      height: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
-      position: relative;
-    }
-
-    video.bg-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: 0;
-      object-fit: cover;
-      filter: brightness(0.4) blur(2px);
+      text-align: center;
+      padding: 20px;
     }
 
     .title {
-      font-size: 2.5rem;
-      color: #00ffcc;
-      text-align: center;
-      animation: glow 2s ease-in-out infinite alternate;
-      z-index: 2;
-      margin-bottom: 2rem;
-    }
-
-    @keyframes glow {
-      from {
-        text-shadow: 0 0 8px #0f0, 0 0 16px #00ffcc;
-      }
-      to {
-        text-shadow: 0 0 18px #00ffff, 0 0 30px #00ffcc, 0 0 40px #00ffff;
-      }
+      font-size: 2.8rem;
+      font-weight: 700;
+      color: #333;
+      margin-bottom: 1.5rem;
     }
 
     .login-box {
-      z-index: 2;
-      background: rgba(0, 255, 255, 0.07);
-      border: 1px solid #00ffcc;
-      box-shadow: 0 0 20px #00ffff33;
-      padding: 2rem;
+      background: rgba(255, 255, 255, 0.7);
+      backdrop-filter: blur(10px);
+      border: 1px solid #ddd;
       border-radius: 15px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-      animation: float 4s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
-    input, button {
-      margin-top: 1rem;
-      padding: 0.8rem;
+      padding: 2rem;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       width: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      color: #0f0;
-      border: 1px solid #0f0;
-      border-radius: 5px;
-      font-size: 1rem;
-      transition: all 0.3s ease;
+      max-width: 400px;
     }
 
-    input::placeholder {
-      color: #0f05;
+    .login-box h2 {
+      margin-bottom: 1rem;
+      font-weight: 600;
+      color: #444;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.9rem;
+      margin-top: 1rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      outline: none;
     }
 
     input:focus {
-      outline: none;
-      border-color: #00ffcc;
-      box-shadow: 0 0 10px #00ffccaa;
+      border-color: #00bcd4;
+      box-shadow: 0 0 5px #00bcd4aa;
     }
 
     button {
+      margin-top: 1.5rem;
+      width: 100%;
+      padding: 0.9rem;
+      font-size: 1rem;
+      background: #00bcd4;
+      color: white;
       font-weight: bold;
-      background-color: #000;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
 
     button:hover {
-      background: #0f0;
-      color: #000;
-      border-color: #0f0;
-      box-shadow: 0 0 15px #0f0;
-      cursor: pointer;
+      background: #0097a7;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 600px) {
       .title {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Live Animated Background -->
-  <video autoplay muted loop class="bg-video">
-    <source src="https://cdn.coverr.co/videos/coverr-futuristic-globe-technology-9481/1080p.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <!-- Animated Background -->
+  <div class="animated-bg">
+    <div class="blob"></div>
+    <div class="blob"></div>
+    <div class="blob"></div>
+  </div>
 
-  <!-- Title -->
-  <div class="title">⚡ AI FUTURE POWER ⚡</div>
-
-  <!-- Login Box -->
-  <div class="login-box">
-    <h2>🔐 LOGIN ACCESS</h2>
-    <input type="text" id="username" placeholder="Username" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="login()">ENTER TERMINAL</button>
+  <!-- Content -->
+  <div class="container">
+    <div class="title">⚡ AI FUTURE POWER ⚡</div>
+    <div class="login-box">
+      <h2>🔐 Login</h2>
+      <input type="text" id="username" placeholder="Username" />
+      <input type="password" id="password" placeholder="Password" />
+      <button onclick="login()">Enter Dashboard</button>
+    </div>
   </div>
 
   <script>
     function login() {
       const user = document.getElementById("username").value.trim();
       const pass = document.getElementById("password").value.trim();
-
       if (user === "123456789" && pass === "123456789") {
         window.location.href = "dashboard.html";
       } else {
