--- a/dashboard.html
+++ b/dashboard.html
@@ -5,195 +5,280 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CRM Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body, h1, h2, ul, li { margin:0; padding:0; font-family:'Poppins', sans-serif; }
-    body { background:#f4f8fb; color:#333; display:flex; height:100vh; overflow:hidden; }
-    header { background:#fff; padding:15px 40px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-    .logo { font-size:20px; font-weight:700; color:#0d47a1; }
-    .container-fluid { display:flex; flex:1; overflow:hidden; }
-    nav.sidebar { width:220px; background:#fff; overflow-y:auto; padding:20px; border-right:1px solid #e0e0e0; }
-    nav.sidebar button, nav.sidebar a { display:block; width:100%; padding:10px; text-align:left; color:#333; font-weight:500; background:none; border:none; cursor:pointer; }
-    nav.sidebar a:hover, nav.sidebar button:hover { background:#eceff1; }
-    .main-area { flex:1; padding:20px; overflow-y:auto; }
-    .cards { display:flex; gap:20px; margin-bottom:20px; flex-wrap: wrap; }
-    .card { background:#fff; flex:1; padding:20px; text-align:center; border-radius:6px; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
-    table { width:100%; border-collapse:collapse; background:#fff; border-radius:6px; overflow:hidden; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
-    th, td { padding:12px 15px; border-bottom:1px solid #eee; font-size:14px; }
-    th { background:#fafafa; }
-    tr:last-child td { border-bottom:none; }
-    .btn-primary { background:#0d47a1; border:none; }
-    .btn-primary:hover { background:#1565c0; }
-    #taskModal .modal-content { font-family:'Poppins', sans-serif; }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #dff6ff, #eaf6f6);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background: #0d47a1;
+      color: white;
+      padding: 20px 40px;
+      font-size: 24px;
+      font-weight: 700;
+    }
+    .container-fluid {
+      display: flex;
+      flex: 1;
+      overflow: hidden;
+    }
+    .sidebar {
+      width: 220px;
+      background: #ffffff;
+      border-right: 1px solid #ddd;
+      padding: 20px;
+    }
+    .sidebar button, .sidebar a {
+      display: block;
+      width: 100%;
+      padding: 12px;
+      color: #0d47a1;
+      background: transparent;
+      border: none;
+      text-align: left;
+      font-weight: 500;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .sidebar a:hover, .sidebar button:hover {
+      background: #e3f2fd;
+    }
+    .main-area {
+      flex: 1;
+      padding: 30px;
+      overflow-y: auto;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .table th, .table td {
+      vertical-align: middle;
+    }
+    .section {
+      display: none;
+    }
+    .active-section {
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <header><div class="logo">CRM Dashboard</div></header>
+
+  <header>CRM Dashboard</header>
   <div class="container-fluid">
     <nav class="sidebar">
-      <button id="btnNewTask" class="btn btn-primary mb-3">+ New Task</button>
-      <a href="#">Dashboard</a>
-      <a href="#">Tasks</a>
-      <a href="#">Leads</a>
-      <a href="#">Inbox</a>
-      <a href="#">Settings</a>
+      <button onclick="showSection('dashboard')">Dashboard</button>
+      <button onclick="showSection('tasks')">Tasks</button>
+      <button onclick="showSection('leads')">Leads</button>
+      <button onclick="showSection('inbox')">Inbox</button>
+      <button onclick="showSection('account')">Account</button>
+      <button class="btn btn-primary mt-3" onclick="openTaskModal()">+ New Task</button>
     </nav>
+
     <div class="main-area">
-      <!-- Task Summary Cards -->
-      <div class="row cards">
-        <div class="col card">Not Started<br><strong id="cntNew">0</strong></div>
-        <div class="col card">In Progress<br><strong id="cntProgress">0</strong></div>
-        <div class="col card">Testing<br><strong id="cntTesting">0</strong></div>
-        <div class="col card">Awaiting Feedback<br><strong id="cntAwait">0</strong></div>
-        <div class="col card">Complete<br><strong id="cntComplete">0</strong></div>
+      <!-- DASHBOARD -->
+      <div id="dashboard" class="section active-section">
+        <div class="row text-center">
+          <div class="col card">Not Started<br><strong id="cntNew">0</strong></div>
+          <div class="col card">In Progress<br><strong id="cntProgress">0</strong></div>
+          <div class="col card">Testing<br><strong id="cntTesting">0</strong></div>
+          <div class="col card">Awaiting Feedback<br><strong id="cntAwait">0</strong></div>
+          <div class="col card">Complete<br><strong id="cntComplete">0</strong></div>
+        </div>
       </div>
 
-      <!-- Tasks Table -->
-      <div class="table-responsive mb-5">
-        <table class="table">
+      <!-- TASKS -->
+      <div id="tasks" class="section">
+        <h4>All Tasks</h4>
+        <table class="table table-bordered mt-3">
           <thead class="table-light">
-            <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th><th>Actions</th></tr>
+            <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th></tr>
           </thead>
-          <tbody id="taskBody"><tr><td colspan="7" class="text-center py-4">No tasks yet</td></tr></tbody>
+          <tbody id="taskBody"></tbody>
         </table>
       </div>
 
-      <!-- Leads Section -->
-      <div id="leadsSection" class="mt-4">
+      <!-- LEADS -->
+      <div id="leads" class="section">
         <h4>Leads</h4>
-        <div id="leadForm" class="mb-3" style="display: none;">
-          <input id="clientName" class="form-control mb-2" placeholder="Client Name">
-          <input id="clientNumber" class="form-control mb-2" placeholder="Contact Number">
-          <input id="clientDomain" class="form-control mb-2" placeholder="Domain">
-          <button class="btn btn-success" onclick="addLead()">Add Lead</button>
-        </div>
-        <div class="table-responsive">
-          <table class="table">
-            <thead class="table-light">
-              <tr><th>#</th><th>Client Name</th><th>Contact</th><th>Domain</th></tr>
-            </thead>
-            <tbody id="leadsBody"><tr><td colspan="4" class="text-center py-3">No leads available</td></tr></tbody>
-          </table>
-        </div>
+        <div id="leadForm" class="mb-3"></div>
+        <table class="table table-bordered">
+          <thead class="table-light">
+            <tr><th>#</th><th>Client Name</th><th>Contact</th><th>Domain</th></tr>
+          </thead>
+          <tbody id="leadsBody"></tbody>
+        </table>
+      </div>
+
+      <!-- INBOX -->
+      <div id="inbox" class="section">
+        <h4>Inbox Messages</h4>
+        <div id="inboxForm" class="mb-3"></div>
+        <ul id="inboxList" class="list-group"></ul>
+      </div>
+
+      <!-- ACCOUNT -->
+      <div id="account" class="section">
+        <h4>Account Details</h4>
+        <p><strong>Bank Name:</strong> XYZ Bank</p>
+        <p><strong>Account No:</strong> 1234567890</p>
+        <p><strong>IFSC:</strong> XYZB0000123</p>
+        <p><strong>Account Holder:</strong> Your Name</p>
       </div>
     </div>
   </div>
 
-  <!-- Task Modal -->
-  <div class="modal fade" id="taskModal" tabindex="-1" aria-hidden="true">
+  <!-- MODAL FOR TASK -->
+  <div class="modal fade" id="taskModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header"><h5 class="modal-title">Create Task</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
+        <div class="modal-header">
+          <h5>Create Task</h5>
+          <button class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
         <div class="modal-body">
           <input id="tName" class="form-control mb-2" placeholder="Task Name">
           <input id="tStart" type="date" class="form-control mb-2">
           <input id="tDue" type="date" class="form-control mb-2">
           <select id="tStatus" class="form-select mb-2">
-            <option>Not Started</option><option>In Progress</option><option>Testing</option><option>Awaiting Feedback</option><option>Complete</option>
+            <option>Not Started</option>
+            <option>In Progress</option>
+            <option>Testing</option>
+            <option>Awaiting Feedback</option>
+            <option>Complete</option>
           </select>
           <select id="tPriority" class="form-select mb-2">
-            <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
+            <option>Low</option>
+            <option>Medium</option>
+            <option>High</option>
+            <option>Urgent</option>
           </select>
         </div>
         <div class="modal-footer">
-          <button id="saveTask" class="btn btn-primary">Save</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button class="btn btn-primary" onclick="saveTask()">Save</button>
+          <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Role control
-    const isMaster = true; // Change to false for non-admin users
-
-    // Task section logic
+    const userRole = "admin"; // roles: admin, editor, viewer
     const tasks = [];
-    document.getElementById('btnNewTask').onclick = () => new bootstrap.Modal(document.getElementById('taskModal')).show();
-    document.getElementById('saveTask').onclick = () => {
-      const t = {
-        name: tName.value.trim(),
-        start: tStart.value,
-        due: tDue.value,
-        status: tStatus.value,
-        priority: tPriority.value
-      };
-      if (!t.name || !t.start || !t.due) return alert('Please fill all required fields');
-      tasks.push(t);
-      renderTasks();
-      updateCounts();
-      bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
-      tName.value = '';
-    };
-
-    function renderTasks(){
-      const body = document.getElementById('taskBody');
-      body.innerHTML = tasks.length
-        ? tasks.map((t,i) => `
-            <tr>
-              <td>${i+1}</td>
-              <td>${t.name}</td>
-              <td><span class="badge bg-info">${t.status}</span></td>
-              <td>${t.start}</td>
-              <td>${t.due}</td>
-              <td>${t.priority}</td>
-              <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>
-            </tr>`).join('')
-        : `<tr><td colspan="7" class="text-center py-4">No tasks yet</td></tr>`;
-    }
-
-    function updateCounts(){
-      const counts = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
-      tasks.forEach(t => counts[t.status]++);
-      cntNew.textContent = counts["Not Started"];
-      cntProgress.textContent = counts["In Progress"];
-      cntTesting.textContent = counts["Testing"];
-      cntAwait.textContent = counts["Awaiting Feedback"];
-      cntComplete.textContent = counts["Complete"];
-    }
-
-    // Leads logic
     const leads = [];
+    const inboxNotes = [];
 
-    function showLeadForm() {
-      if (isMaster) {
-        document.getElementById('leadForm').style.display = 'block';
+    function showSection(id) {
+      document.querySelectorAll('.section').forEach(s => s.classList.remove('active-section'));
+      document.getElementById(id).classList.add('active-section');
+    }
+
+    function openTaskModal() {
+      new bootstrap.Modal(document.getElementById('taskModal')).show();
+    }
+
+    function saveTask() {
+      const name = tName.value.trim();
+      const start = tStart.value;
+      const due = tDue.value;
+      const status = tStatus.value;
+      const priority = tPriority.value;
+      if (!name || !start || !due) return alert("Fill all fields");
+
+      tasks.push({ name, start, due, status, priority });
+      renderTasks();
+      updateDashboard();
+      bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
+      tName.value = tStart.value = tDue.value = "";
+    }
+
+    function renderTasks() {
+      taskBody.innerHTML = tasks.map((t, i) => `
+        <tr>
+          <td>${i+1}</td>
+          <td>${t.name}</td>
+          <td>${t.status}</td>
+          <td>${t.start}</td>
+          <td>${t.due}</td>
+          <td>${t.priority}</td>
+        </tr>
+      `).join('');
+    }
+
+    function updateDashboard() {
+      const count = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
+      tasks.forEach(t => count[t.status]++);
+      cntNew.textContent = count["Not Started"];
+      cntProgress.textContent = count["In Progress"];
+      cntTesting.textContent = count["Testing"];
+      cntAwait.textContent = count["Awaiting Feedback"];
+      cntComplete.textContent = count["Complete"];
+    }
+
+    function renderLeads() {
+      const body = document.getElementById("leadsBody");
+      if (leads.length === 0) {
+        body.innerHTML = `<tr><td colspan="4" class="text-center">No leads available</td></tr>`;
+        return;
+      }
+      body.innerHTML = leads.map((l, i) => `
+        <tr><td>${i+1}</td><td>${l.name}</td><td>${l.contact}</td><td>${l.domain}</td></tr>
+      `).join('');
+    }
+
+    function renderInbox() {
+      inboxList.innerHTML = inboxNotes.map((n, i) => `<li class="list-group-item">${n}</li>`).join('');
+    }
+
+    function setupForms() {
+      if (userRole === "admin") {
+        leadForm.innerHTML = `
+          <input id="clientName" class="form-control mb-2" placeholder="Client Name">
+          <input id="clientContact" class="form-control mb-2" placeholder="Contact Number">
+          <input id="clientDomain" class="form-control mb-2" placeholder="Domain">
+          <button class="btn btn-success" onclick="addLead()">Add Lead</button>
+        `;
+        inboxForm.innerHTML = `
+          <input id="inboxMessage" class="form-control mb-2" placeholder="Important Note">
+          <button class="btn btn-primary" onclick="addInboxNote()">Send</button>
+        `;
       }
     }
 
     function addLead() {
       const name = clientName.value.trim();
-      const number = clientNumber.value.trim();
+      const contact = clientContact.value.trim();
       const domain = clientDomain.value.trim();
-
-      if (!name || !number || !domain) return alert('Please fill all fields');
-
-      leads.push({ name, number, domain });
+      if (!name || !contact || !domain) return alert("Fill all fields");
+      leads.push({ name, contact, domain });
       renderLeads();
-      clientName.value = clientNumber.value = clientDomain.value = '';
+      clientName.value = clientContact.value = clientDomain.value = "";
     }
 
-    function renderLeads() {
-      const body = document.getElementById('leadsBody');
-      if (leads.length === 0) {
-        body.innerHTML = `<tr><td colspan="4" class="text-center py-3">No leads available</td></tr>`;
-        return;
-      }
-      body.innerHTML = leads.map((l, i) => `
-        <tr>
-          <td>${i + 1}</td>
-          <td>${l.name}</td>
-          <td>${l.number}</td>
-          <td>${l.domain}</td>
-        </tr>
-      `).join('');
+    function addInboxNote() {
+      const msg = inboxMessage.value.trim();
+      if (!msg) return alert("Message is empty");
+      inboxNotes.push(msg);
+      renderInbox();
+      inboxMessage.value = "";
     }
 
     // Init
-    showLeadForm();
+    setupForms();
     renderTasks();
     renderLeads();
+    renderInbox();
+    updateDashboard();
   </script>
 </body>
 </html>
