--- a/dashboard.html
+++ b/dashboard.html
@@ -2,260 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CRM Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom right, #e3f2fd, #bbdefb);
-    }
-    header {
-      background: #0d47a1;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .container-fluid {
-      display: flex;
-      height: calc(100vh - 70px);
-    }
-    nav.sidebar {
-      width: 200px;
-      background: #fff;
-      padding: 20px;
-      border-right: 1px solid #ccc;
-    }
-    nav.sidebar a {
-      display: block;
-      padding: 10px;
-      margin-bottom: 10px;
-      text-decoration: none;
-      color: #0d47a1;
-      font-weight: 500;
-    }
-    nav.sidebar a:hover {
-      background: #e3f2fd;
-      border-radius: 5px;
-    }
-    .main-area {
-      flex: 1;
-      padding: 20px;
-      overflow-y: auto;
-      background-color: #f5f5f5;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .section {
-      display: none;
-    }
-    .active-section {
-      display: block;
-    }
-    table td, table th {
-      vertical-align: middle !important;
-    }
+    body { font-family: Arial, sans-serif; margin:0; background:#f4f4f4;}
+    .sidebar { width:220px; background:#fff; position:fixed; top:0; left:0; height:100vh; border-right:1px solid #ccc; padding-top:20px;}
+    .sidebar button { background:#1976d2; color:#fff; padding:10px; margin:10px; width:180px; border:none; border-radius:4px; cursor:pointer;}
+    .sidebar ul { list-style:none; padding:0;}
+    .sidebar ul li { margin:20px;}
+    .sidebar ul li a { text-decoration:none; color:#1976d2; font-weight:bold;}
+    .main { margin-left:220px; padding:20px;}
+    table { border-collapse:collapse; width:100%;}
+    th, td { border:1px solid #ddd; padding:8px; text-align:left;}
+    th { background:#1976d2; color:#fff;}
   </style>
+  <!-- Firebase -->
+  <script type="module">
+    // Firebase Imports
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDaZjc53y1us3aFL9yfExSpYVvYSZt0aeA",
+      authDomain: "ai-logistics-company.firebaseapp.com",
+      projectId: "ai-logistics-company",
+      storageBucket: "ai-logistics-company.appspot.com",
+      messagingSenderId: "971305955081",
+      appId: "1:971305955081:web:4f422c8a9b9ebbd868add8",
+      measurementId: "G-3R5N3WW6X1"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    window.onload = async () => {
+      const tasksCol = collection(db, "tasks");
+      const taskSnapshot = await getDocs(tasksCol);
+      const taskList = taskSnapshot.docs.map(doc => doc.data());
+
+      const tbody = document.getElementById("taskTableBody");
+      tbody.innerHTML = "";
+      let count = 1;
+      taskList.forEach(task => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${count++}</td>
+          <td>${task.name || "N/A"}</td>
+          <td>${task.status || "N/A"}</td>
+          <td>${task.start || "N/A"}</td>
+          <td>${task.due || "N/A"}</td>
+          <td>${task.priority || "N/A"}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    };
+  </script>
 </head>
 <body>
-  <header>CRM Dashboard</header>
-  <div class="container-fluid">
-    <nav class="sidebar">
-      <button class="btn btn-primary w-100 mb-3" onclick="openTaskModal()">+ New Task</button>
-      <a href="#" onclick="showSection('dashboard')">Dashboard</a>
-      <a href="#" onclick="showSection('tasks')">Tasks</a>
-      <a href="#" onclick="showSection('leads')">Leads</a>
-      <a href="#" onclick="showSection('inbox')">Inbox</a>
-      <a href="#" onclick="showSection('account')">Account</a>
-    </nav>
-
-    <div class="main-area">
-      <!-- Dashboard Section -->
-      <div id="dashboard" class="section active-section">
-        <div class="row text-center">
-          <div class="col card"><h6>Not Started</h6><div id="cntNew">0</div></div>
-          <div class="col card"><h6>In Progress</h6><div id="cntProgress">0</div></div>
-          <div class="col card"><h6>Testing</h6><div id="cntTesting">0</div></div>
-          <div class="col card"><h6>Awaiting Feedback</h6><div id="cntAwait">0</div></div>
-          <div class="col card"><h6>Complete</h6><div id="cntComplete">0</div></div>
-        </div>
-      </div>
-
-      <!-- Tasks Section -->
-      <div id="tasks" class="section">
-        <h4>Tasks</h4>
-        <table class="table table-bordered bg-white">
-          <thead class="table-light">
-            <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th></tr>
-          </thead>
-          <tbody id="taskBody"></tbody>
-        </table>
-      </div>
-
-      <!-- Leads Section -->
-      <div id="leads" class="section">
-        <h4>Leads</h4>
-        <div id="leadForm" class="mb-3"></div>
-        <table class="table table-bordered bg-white">
-          <thead class="table-light">
-            <tr><th>#</th><th>Client Name</th><th>Contact</th><th>Domain</th></tr>
-          </thead>
-          <tbody id="leadsBody"></tbody>
-        </table>
-      </div>
-
-      <!-- Inbox Section -->
-      <div id="inbox" class="section">
-        <h4>Inbox</h4>
-        <div id="inboxForm" class="mb-3"></div>
-        <ul id="inboxList" class="list-group"></ul>
-      </div>
-
-      <!-- Account Section -->
-      <div id="account" class="section">
-        <h4>Bank Account Details</h4>
-        <div class="card">
-          <p><strong>Bank Name:</strong> Sample Bank</p>
-          <p><strong>Account Number:</strong> 1234567890</p>
-          <p><strong>IFSC:</strong> SAMPLE1234</p>
-          <p><strong>Account Holder:</strong> Admin User</p>
-        </div>
-      </div>
-    </div>
+  <div class="sidebar">
+    <button>+ New Task</button>
+    <ul>
+      <li><a href="#">Dashboard</a></li>
+      <li><a href="#">Tasks</a></li>
+      <li><a href="#">Leads</a></li>
+      <li><a href="#">Inbox</a></li>
+      <li><a href="#">Account</a></li>
+    </ul>
   </div>
-
-  <!-- Task Modal -->
-  <div class="modal fade" id="taskModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header"><h5 class="modal-title">Create Task</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
-        <div class="modal-body">
-          <input id="tName" class="form-control mb-2" placeholder="Task Name">
-          <input id="tStart" type="date" class="form-control mb-2">
-          <input id="tDue" type="date" class="form-control mb-2">
-          <select id="tStatus" class="form-select mb-2">
-            <option>Not Started</option><option>In Progress</option><option>Testing</option><option>Awaiting Feedback</option><option>Complete</option>
-          </select>
-          <select id="tPriority" class="form-select mb-2">
-            <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
-          </select>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-primary" onclick="saveTask()">Save</button>
-          <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        </div>
-      </div>
-    </div>
+  <div class="main">
+    <h1>CRM Dashboard</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Status</th>
+          <th>Start</th>
+          <th>Due</th>
+          <th>Priority</th>
+        </tr>
+      </thead>
+      <tbody id="taskTableBody">
+        <tr><td colspan="6">Loading tasks...</td></tr>
+      </tbody>
+    </table>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const userRole = "admin"; // roles: admin, viewer, editor
-    let tasks = JSON.parse(localStorage.getItem("tasks") || "[]");
-    let leads = JSON.parse(localStorage.getItem("leads") || "[]");
-    let inboxNotes = JSON.parse(localStorage.getItem("inbox") || "[]");
-
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active-section'));
-      document.getElementById(id).classList.add('active-section');
-    }
-
-    function openTaskModal() {
-      new bootstrap.Modal(document.getElementById('taskModal')).show();
-    }
-
-    function saveTask() {
-      const name = tName.value.trim();
-      const start = tStart.value;
-      const due = tDue.value;
-      const status = tStatus.value;
-      const priority = tPriority.value;
-      if (!name || !start || !due) return alert("Fill all fields");
-      tasks.push({ name, start, due, status, priority });
-      localStorage.setItem("tasks", JSON.stringify(tasks));
-      renderTasks(); updateDashboard();
-      bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
-      tName.value = tStart.value = tDue.value = "";
-    }
-
-    function renderTasks() {
-      const body = document.getElementById("taskBody");
-      body.innerHTML = tasks.length ? tasks.map((t,i) => `
-        <tr><td>${i+1}</td><td>${t.name}</td><td>${t.status}</td><td>${t.start}</td><td>${t.due}</td><td>${t.priority}</td></tr>
-      `).join('') : `<tr><td colspan="6" class="text-center">No tasks yet</td></tr>`;
-    }
-
-    function updateDashboard() {
-      const count = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
-      tasks.forEach(t => count[t.status]++);
-      cntNew.textContent = count["Not Started"];
-      cntProgress.textContent = count["In Progress"];
-      cntTesting.textContent = count["Testing"];
-      cntAwait.textContent = count["Awaiting Feedback"];
-      cntComplete.textContent = count["Complete"];
-    }
-
-    function renderLeads() {
-      const body = document.getElementById("leadsBody");
-      body.innerHTML = leads.length ? leads.map((l,i) => `
-        <tr><td>${i+1}</td><td>${l.name}</td><td>${l.contact}</td><td>${l.domain}</td></tr>
-      `).join('') : `<tr><td colspan="4" class="text-center">No leads available</td></tr>`;
-    }
-
-    function renderInbox() {
-      inboxList.innerHTML = inboxNotes.length ? inboxNotes.map(n => `<li class="list-group-item">${n}</li>`).join('') : `<li class="list-group-item text-center">No notes</li>`;
-    }
-
-    function setupForms() {
-      if (userRole === "admin") {
-        leadForm.innerHTML = `
-          <input id="clientName" class="form-control mb-2" placeholder="Client Name">
-          <input id="clientContact" class="form-control mb-2" placeholder="Contact Number">
-          <input id="clientDomain" class="form-control mb-2" placeholder="Domain">
-          <button class="btn btn-success" onclick="addLead()">Add Lead</button>
-        `;
-        inboxForm.innerHTML = `
-          <input id="inboxMessage" class="form-control mb-2" placeholder="Important Note">
-          <button class="btn btn-primary" onclick="addInboxNote()">Send</button>
-        `;
-      }
-    }
-
-    function addLead() {
-      const name = clientName.value.trim();
-      const contact = clientContact.value.trim();
-      const domain = clientDomain.value.trim();
-      if (!name || !contact || !domain) return alert("Fill all fields");
-      leads.push({ name, contact, domain });
-      localStorage.setItem("leads", JSON.stringify(leads));
-      renderLeads();
-      clientName.value = clientContact.value = clientDomain.value = "";
-    }
-
-    function addInboxNote() {
-      const msg = inboxMessage.value.trim();
-      if (!msg) return alert("Message is empty");
-      inboxNotes.push(msg);
-      localStorage.setItem("inbox", JSON.stringify(inboxNotes));
-      renderInbox();
-      inboxMessage.value = "";
-    }
-
-    // Init
-    setupForms();
-    renderTasks();
-    renderLeads();
-    renderInbox();
-    updateDashboard();
-  </script>
 </body>
 </html>
